Refactored to allow docker build and adding other models more easily

--- a/example.env
+++ b/example.env
@@ -1,4 +1,7 @@
-MDB_URI="mongodb+srv://<user>:<password>@<cluster>.mongodb.net"
+MDBCONNSTR="mongodb+srv://<user>:<password>@<cluster>.mongodb.net"
 MDB_DB="sample_mflix"
 MDB_COLL="embedded_movies"
-OPENAI_API_KEY="<api key>" # If you want to use vector search
+OPENAIAPIKEY="<api key>" # If you want to use vector search
+# If using Azure OpenAI deployment
+OPENAIDEPLOYMENT=""
+OPENAIENDPOINT=""
