Make pipelines more configurable using env variables

--- a/example.env
+++ b/example.env
@@ -1,6 +1,8 @@
 MDBCONNSTR="mongodb+srv://<user>:<password>@<cluster>.mongodb.net"
 MDB_DB="sample_mflix"
 MDB_COLL="embedded_movies"
+MDB_SEARCHIDX="searchIndex"
+MDB_VECRTORIDX="vectorIndex"
 OPENAIAPIKEY="<api key>" # If you want to use vector search
 # If using Azure OpenAI deployment
 OPENAIDEPLOYMENT=""
