Updated RSF to use sigmoid normalisation

--- a/example.env
+++ b/example.env
@@ -5,5 +5,5 @@ MDB_SEARCHIDX="searchIndex"
 MDB_VECRTORIDX="vectorIndex"
 OPENAIAPIKEY="<api key>" # If you want to use vector search
 # If using Azure OpenAI deployment
-OPENAIDEPLOYMENT=""
-OPENAIENDPOINT=""
+# OPENAIDEPLOYMENT=""
+# OPENAIENDPOINT=""
