--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@azure/openai": "^1.0.0-beta.11",
+    "@leafygreen-ui/banner": "^7.0.18",
     "@leafygreen-ui/button": "^21.0.11",
     "@leafygreen-ui/card": "^10.0.6",
-    "@leafygreen-ui/loading-indicator": "^2.0.7",
+    "@leafygreen-ui/code": "^14.2.18",
+    "@leafygreen-ui/loading-indicator": "^2.0.8",
     "@leafygreen-ui/logo": "^8.0.12",
+    "@leafygreen-ui/modal": "^16.0.4",
     "@leafygreen-ui/palette": "^4.0.8",
     "@leafygreen-ui/search-input": "^2.1.2",
     "@leafygreen-ui/tabs": "^11.1.13",
