--- a/example.env
+++ b/example.env
@@ -4,6 +4,6 @@ MDB_COLL="embedded_movies"
 MDB_SEARCHIDX="searchIndex"
 MDB_VECRTORIDX="vectorIndex"
 OPENAIAPIKEY="<api key>" # If you want to use vector search
-# If using Azure OpenAI deployment
-# OPENAIDEPLOYMENT=""
-# OPENAIENDPOINT=""
+# OPENAIDEPLOYMENT=""   # If using Azure OpenAI deployment
+# OPENAIENDPOINT=""     # If using Azure OpenAI deployment
+# MISTRALAPIKEY=""
