Bug fix: add NOMICAPIKEY variable

--- a/example.env
+++ b/example.env
@@ -7,3 +7,4 @@ OPENAIAPIKEY="<api key>" # If you want to use vector search
 # OPENAIDEPLOYMENT=""   # If using Azure OpenAI deployment
 # OPENAIENDPOINT=""     # If using Azure OpenAI deployment
 # MISTRALAPIKEY=""
+# NOMICAPIKEY=""
