--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@leafygreen-ui/tabs": "^11.1.13",
     "@leafygreen-ui/toast": "^6.1.18",
     "@leafygreen-ui/typography": "^18.0.1",
+    "@mistralai/mistralai": "^0.0.10",
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "mongodb": "^6.3.0",
