correct MDB_VECTORIDX in  .env and add OPENAIEMBEDDINGMODEL to support for different openai embedding model

--- a/example.env
+++ b/example.env
@@ -2,8 +2,9 @@ MDBCONNSTR="mongodb+srv://<user>:<password>@<cluster>.mongodb.net"
 MDB_DB="sample_mflix"
 MDB_COLL="embedded_movies"
 MDB_SEARCHIDX="searchIndex"
-MDB_VECRTORIDX="vectorIndex"
+MDB_VECTORIDX="vectorIndex"
 OPENAIAPIKEY="<api key>" # If you want to use vector search
+OPENAIEMBEDDINGMODEL="text-embedding-ada-002"
 # OPENAIDEPLOYMENT=""   # If using Azure OpenAI deployment
 # OPENAIENDPOINT=""     # If using Azure OpenAI deployment
 # MISTRALAPIKEY=""
