--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "@mistralai/mistralai": "^0.0.10",
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
-    "mongodb": "^6.3.0",
-    "next": "14.0.3",
+    "mongodb": "^6.6.2",
+    "next": "^14.2.3",
     "next-connect": "^1.0.0",
     "openai": "^4.20.1",
     "react": "^18",
