--- a/example.env
+++ b/example.env
@@ -3,9 +3,9 @@ MDB_DB="sample_mflix"
 MDB_COLL="embedded_movies"
 MDB_SEARCHIDX="searchIndex"
 MDB_VECTORIDX="vectorIndex"
-OPENAIAPIKEY="<api key>" # If you want to use vector search
+OPENAIAPIKEY="<api key>" # If using OpenAI embeddings
 OPENAIEMBEDDINGMODEL="text-embedding-ada-002"
 # OPENAIDEPLOYMENT=""   # If using Azure OpenAI deployment
 # OPENAIENDPOINT=""     # If using Azure OpenAI deployment
-# MISTRALAPIKEY=""
-# NOMICAPIKEY=""
+# MISTRALAPIKEY="" # If using Mistral embeddings
+# NOMICAPIKEY="" # If using Nomic embeddings
