--- a/example.env
+++ b/example.env
@@ -4,7 +4,7 @@ MDB_COLL="embedded_movies"
 MDB_SEARCHIDX="searchIndex"
 MDB_VECTORIDX="vectorIndex"
 OPENAIAPIKEY="<api key>" # If using OpenAI embeddings
-OPENAIEMBEDDINGMODEL="text-embedding-ada-002"
+OPENAIEMBEDDINGMODEL="text-embedding-ada-002" # Can change this to use an alternative embedding model
 # OPENAIDEPLOYMENT=""   # If using Azure OpenAI deployment
 # OPENAIENDPOINT=""     # If using Azure OpenAI deployment
 # MISTRALAPIKEY="" # If using Mistral embeddings
