Rebase dev from main (#14)
* Update rrf.js

Hotfix

* Remove Cosine Re-Ranker for deployment

* Bump follow-redirects from 1.15.5 to 1.15.6

Bumps [follow-redirects](https://github.com/follow-redirects/follow-redirects) from 1.15.5 to 1.15.6.
- [Release notes](https://github.com/follow-redirects/follow-redirects/releases)
- [Commits](https://github.com/follow-redirects/follow-redirects/compare/v1.15.5...v1.15.6)

---
updated-dependencies:
- dependency-name: follow-redirects
  dependency-type: indirect
...

Signed-off-by: dependabot[bot] <support@github.com>

* fix bad import

* Enhancements for switching environment variables more easily.

* correct MDB_VECTORIDX and add configurable OPENAIEMBEDDINGMODEL in  example.env (#12)

* correct MDB_VECTORIDX in  .env and add OPENAIEMBEDDINGMODEL to support for different openai embedding model

* defaults to text-embedding-ada-002 if the embedding model is not set

---------

Co-authored-by: John Syin Ang <johnsyinang@Johns-MacBook-Pro.local>
Co-authored-by: John Syin Ang <johnsyinang@Johns-MBP.dlinkrouter.local>

* Update README and make it clearer that embedding API is not optional

* modified:   README.md

* Add helpful comment to example.env

---------

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: John Syin <johnsyin97@gmail.com>
Co-authored-by: John Syin Ang <johnsyinang@Johns-MacBook-Pro.local>
Co-authored-by: John Syin Ang <johnsyinang@Johns-MBP.dlinkrouter.local>

--- a/example.env
+++ b/example.env
@@ -2,9 +2,10 @@ MDBCONNSTR="mongodb+srv://<user>:<password>@<cluster>.mongodb.net"
 MDB_DB="sample_mflix"
 MDB_COLL="embedded_movies"
 MDB_SEARCHIDX="searchIndex"
-MDB_VECRTORIDX="vectorIndex"
-OPENAIAPIKEY="<api key>" # If you want to use vector search
+MDB_VECTORIDX="vectorIndex"
+OPENAIAPIKEY="<api key>" # If using OpenAI embeddings
+OPENAIEMBEDDINGMODEL="text-embedding-ada-002" # Can change this to use an alternative embedding model
 # OPENAIDEPLOYMENT=""   # If using Azure OpenAI deployment
 # OPENAIENDPOINT=""     # If using Azure OpenAI deployment
-# MISTRALAPIKEY=""
-# NOMICAPIKEY=""
+# MISTRALAPIKEY="" # If using Mistral embeddings
+# NOMICAPIKEY="" # If using Nomic embeddings
