--- a/example.env
+++ b/example.env
@@ -3,9 +3,12 @@ MDB_DB="sample_mflix"
 MDB_COLL="embedded_movies"
 MDB_SEARCHIDX="searchIndex"
 MDB_VECTORIDX="vectorIndex"
+DIMENSIONS="1536" # Number of dimensions of vector embedding model 
 OPENAIAPIKEY="<api key>" # If using OpenAI embeddings
 OPENAIEMBEDDINGMODEL="text-embedding-ada-002" # Can change this to use an alternative embedding model
 # OPENAIDEPLOYMENT=""   # If using Azure OpenAI deployment
 # OPENAIENDPOINT=""     # If using Azure OpenAI deployment
 # MISTRALAPIKEY="" # If using Mistral embeddings
 # NOMICAPIKEY="" # If using Nomic embeddings
+# VOYAGEAPIKEY = "" # If using Voyage AI embeddings
+# VOYAGEMODEL = "voyage-3" # Can change this https://docs.voyageai.com/docs/embeddings
