--- a/example.env
+++ b/example.env
@@ -3,12 +3,9 @@ MDB_DB="sample_mflix"
 MDB_COLL="embedded_movies"
 MDB_SEARCHIDX="searchIndex"
 MDB_VECTORIDX="vectorIndex"
-DIMENSIONS="1536" # Number of dimensions of vector embedding model 
-OPENAIAPIKEY="<api key>" # If using OpenAI embeddings
-OPENAIEMBEDDINGMODEL="text-embedding-ada-002" # Can change this to use an alternative embedding model
+EMBEDDING_PROVIDER="" # Options: azure_openai, openai, mistral, nomic, voyageai
+EMBEDDING_MODEL="" # Can change this to use an alternative embedding models depending on provider. Defaults are set per provider.
+DIMENSIONS="" # Number of dimensions of vector embedding model. Defaults are set per provider. 
+APIKEY="" 
 # OPENAIDEPLOYMENT=""   # If using Azure OpenAI deployment
 # OPENAIENDPOINT=""     # If using Azure OpenAI deployment
-# MISTRALAPIKEY="" # If using Mistral embeddings
-# NOMICAPIKEY="" # If using Nomic embeddings
-# VOYAGEAPIKEY = "" # If using Voyage AI embeddings
-# VOYAGEMODEL = "voyage-3" # Can change this https://docs.voyageai.com/docs/embeddings
