Working reranking endpoint in results component

--- a/example.env
+++ b/example.env
@@ -6,6 +6,10 @@ MDB_VECTORIDX="vectorIndex"
 EMBEDDING_PROVIDER="" # Options: azure_openai, openai, mistral, nomic, voyageai
 EMBEDDING_MODEL="" # Can change this to use an alternative embedding models depending on provider. Defaults are set per provider.
 DIMENSIONS="" # Number of dimensions of vector embedding model. Defaults are set per provider. 
-APIKEY="" 
+EMBEDDING_APIKEY="" 
 # OPENAIDEPLOYMENT=""   # If using Azure OpenAI deployment
 # OPENAIENDPOINT=""     # If using Azure OpenAI deployment
+# Optionally use a reranking model as well
+RERANK_PROVIDER="voyageai" # Options: voyageai
+RERANK_MODEL="rerank-2" 
+RERANK_APIKEY=""
