Wire up schema to backend and app context. Move fts pipeline gen to backend.

--- a/example.env
+++ b/example.env
@@ -13,3 +13,5 @@ EMBEDDING_APIKEY=""
 RERANK_PROVIDER="voyageai" # Options: voyageai
 RERANK_MODEL="rerank-2" 
 RERANK_APIKEY=""
+# Name of the data schema to use from config.mjs (defaults to 'default')
+SCHEMA=""
