--- a/example.env
+++ b/example.env
@@ -3,7 +3,7 @@ MDB_DB="sample_mflix"
 MDB_COLL="embedded_movies"
 MDB_SEARCHIDX="searchIndex"
 MDB_VECTORIDX="vectorIndex"
-EMBEDDING_PROVIDER="" # Options: azure_openai, openai, mistral, nomic, voyageai
+EMBEDDING_PROVIDER="" # Options: azure_openai, openai, mistral, nomic, voyageai, ollama
 EMBEDDING_MODEL="" # Can change this to use an alternative embedding models depending on provider. Defaults are set per provider.
 DIMENSIONS="" # Number of dimensions of vector embedding model. Defaults are set per provider. 
 EMBEDDING_APIKEY="" 
