--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@leafygreen-ui/banner": "^7.0.18",
     "@leafygreen-ui/button": "^21.0.11",
     "@leafygreen-ui/card": "^10.0.6",
+    "@leafygreen-ui/checkbox": "^13.0.0",
     "@leafygreen-ui/code": "^14.2.18",
     "@leafygreen-ui/expandable-card": "^3.2.3",
     "@leafygreen-ui/loading-indicator": "^2.0.8",
@@ -20,10 +21,10 @@
     "@leafygreen-ui/modal": "^16.0.4",
     "@leafygreen-ui/palette": "^4.0.8",
     "@leafygreen-ui/search-input": "^2.1.2",
+    "@leafygreen-ui/select": "^12.1.7",
     "@leafygreen-ui/tabs": "^11.1.13",
     "@leafygreen-ui/toast": "^6.1.18",
     "@leafygreen-ui/typography": "^18.0.1",
-    "@leafygreen-ui/checkbox": "^13.0.0",
     "@mistralai/mistralai": "^0.0.10",
     "axios": "^1.8.2",
     "dotenv": "^16.3.1",
