--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next-connect": "^1.0.0",
     "openai": "^4.20.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "vectorious": "^6.1.14"
   }
 }
