Add Atlas Voyage model integration and update environment variables

--- a/example.env
+++ b/example.env
@@ -2,14 +2,14 @@ MDBCONNSTR="mongodb+srv://<user>:<password>@<cluster>.mongodb.net"
 MDB_DB="sample_mflix"
 MDB_COLL="embedded_movies"
 MDB_SEARCHIDX="searchIndex"
-EMBEDDING_PROVIDER="" # Options: azure_openai, openai, mistral, nomic, voyageai, ollama
+EMBEDDING_PROVIDER="" # Options: azure_openai, openai, mistral, nomic, voyageai, atlas, ollama
 EMBEDDING_MODEL="" # Can change this to use an alternative embedding models depending on provider. Defaults are set per provider.
 DIMENSIONS="" # Number of dimensions of vector embedding model. Defaults are set per provider. 
 EMBEDDING_APIKEY="" 
 # OPENAIDEPLOYMENT=""   # If using Azure OpenAI deployment
 # OPENAIENDPOINT=""     # If using Azure OpenAI deployment
 # Optionally use a reranking model as well
-RERANK_PROVIDER="voyageai" # Options: voyageai
+RERANK_PROVIDER="voyageai" # Options: voyageai, atlas
 RERANK_MODEL="rerank-2" 
 RERANK_APIKEY=""
 # Name of the data schema to use from config.mjs (defaults to 'default')
